Oct 20, 2010 - chris ---------------------------------------------------
o enhanced performance when appending (or prepending) keys; hamsterdb 
    will automatically assume HAM_HINT_APPEND (or HAM_HINT_PREPEND) if the 
    previous operation was also an append (or prepend)

Oct 16, 2010 - chris ---------------------------------------------------
o fixed a small memory leak when committing remote transactions
o bugfix: using HAM_DIRECT_ACCESS with records of a length <= 8 bytes
    returned pointers to temporary copies of the record and not to the
    original data (thanks, Lionel)

Oct 14, 2010 - chris ---------------------------------------------------
o another important performance improvements when using hamsterdb with
    extended keys

Oct 13, 2010 - chris ---------------------------------------------------
o performance improvements - hamsterdb scales now better with millions
    of keys

Sep 15, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.6

Sep 12, 2010 - chris
o the unix daemon was ported to a Win32 Service (which can also run in
    foreground)

Sep 07, 2010 - chris
o the tutorial is no longer part of the Doxygen files; instead it's now 
    online in a wiki: http://wiki.github.com/cruppstahl/hamsterdb
o several functions are now deprecated:
    use ham_open_ex instead of ham_open
    use ham_create_ex instead of ham_create
    use ham_env_open_ex instead of ham_env_open
    use ham_env_create_ex instead of ham_env_create

Aug 31, 2010 - chris
o fixed compilation on newest ArchLinux (gcc 4.5.1) - thanks, zebul666

Aug 28, 2010 - chris
o created MSVC projects for the server and the new samples; all MSVC
        projects and workspaces were updated to Visual Studio 2009

Aug 26, 2010 - chris
o ham_flush is now deprecated, use ham_env_flush instead; both functions
	had very similar functionality

Aug 25, 2010 - chris