@@ -1,3 +1,6 @@
+Oct 22, 2010 - chris ---------------------------------------------------
+o further enhanced performance by improving some cache interfaces
+
 Oct 20, 2010 - chris ---------------------------------------------------
 o enhanced performance when appending (or prepending) keys; hamsterdb 
     will automatically assume HAM_HINT_APPEND (or HAM_HINT_PREPEND) if the 
